Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integrations/test_upgrade.html
+++ b/backend/integrations/test_upgrade.html
@@ -352,7 +352,8 @@ def image(api_client, image_ubuntu, unique_name, wait_timeout):
         )
 
     yield dict(id=f&#34;{data[&#39;metadata&#39;][&#39;namespace&#39;]}/{unique_image_id}&#34;,
-               user=image_ubuntu.ssh_user)
+               user=image_ubuntu.ssh_user,
+               first_nic=image_ubuntu.first_nic)
 
     code, data = api_client.images.delete(unique_image_id)</code></pre>
 </details>
