--- a/backend/fixtures/volumes.html
+++ b/backend/fixtures/volumes.html
@@ -79,6 +79,20 @@ def volume_checker(api_client, wait_timeout, sleep_timeout):
                 return True, (code, data)
             return False, (code, data)
 
+        @wait_until(wait_timeout, sleep_timeout)
+        def wait_volumes_deleted(self, vol_names):
+            for vol_name in vol_names:
+                self.volumes.delete(name=vol_name)
+                endtime = datetime.now() + timedelta(seconds=wait_timeout)
+                while endtime &gt; datetime.now():
+                    code, data = self.volumes.get(name=vol_name)
+                    if 404 == code:
+                        break
+                    sleep(sleep_timeout)
+                if not (code == 404):
+                    return False, (code, data)
+            return True, (code, data)
+
     return VolumeChecker()</code></pre>
 </details>
 <div class="desc"></div>
